--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -37,6 +37,8 @@ Resources:
       Tags:
         - Key: Name
           Value: !Sub backend-${ID}
+        - Key: Project
+          Value: Udapeople
 
   InstanceEIP:
     Type: AWS::EC2::EIP
